--- a/pglockpy.html
+++ b/pglockpy.html
@@ -57,6 +57,7 @@
                 <li>Postgres <a href="https://www.postgresql.org/docs/current/explicit-locking.html#LOCKING-TABLES"> table-level locking docs</a></li>
                 <li>Postgres <a href="https://www.postgresql.org/docs/current/explicit-locking.html#LOCKING-ROWS">row-level locking docs</a></li>
                 <li><a href="https://github.com/tbicr/django-pg-zero-downtime-migrations#django-pg-zero-downtime-migrations">django-pg-zero-downtime-migrations</a></li>
+                <li><a href="https://pglocks.org/">A more comprehensive list of queries with locks - at some point I may add these into this site</a></li>
             </ul>
             <p>
                 All of the data in this page is derived from <a href="https://github.com/leontrolski/pglockpy/blob/main/test_locks.py">these tests</a>, so is true by some definition of true.
