--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
+            <li>Fast and simple <a href="https://github.com/leontrolski/ocdiff">side-by-side diffs</a> for Python</li>
             <li><a href="pglockpy.html">Postgres locks explorer</a></li>
-            <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a></li>
-            <li><a href="https://stepping.site">stepping</a></li>
         </ul>
     </p>
     <br>
@@ -141,6 +140,7 @@ TODO
         Here are some of my <b>projects</b>, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
             <li><a href="https://stepping.site">stepping</a> - incremental view maintenance for application developers</li>
+            <li><a href="https://github.com/leontrolski/ocdiff">ocdiff</a> - fast and simple side-by-side diffs for Python</li>
             <li><a href="https://github.com/leontrolski/pgtestdbpy">pgtestdbpy</a> - use Postgres TEMPLATE dbs in tests</li>
             <li><a href="https://github.com/leontrolski/isjsonschemasubset">isjsonschemasubset</a> - does what it says on the tin</li>
             <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - Postgres-side nesting of data for Python</li>
