Update queue page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ TODO
             <li>Everyone should use <a href="postgres-advisory-locks.html">Postgres advisory locks</a>!</li>
             <li>Most of the time, you can use <a href="postgres-as-queue.html">Postgres as a queue</a></li>
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
-            <li>Postgres <a href="pglockpy.html">locks explorer</a>!</li>
+            <li>Postgres <a href="pglockpy.html">locks explorer</a></li>
         </ul>
     </p>
     <br>
