--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
+            <li><a href="no-npm.html">Avoiding npm</a> on small projects</li>
             <li>Fast and simple <a href="https://github.com/leontrolski/ocdiff">side-by-side diffs</a> for Python</li>
             <li><a href="pglockpy.html">Postgres locks explorer</a></li>
         </ul>
@@ -61,6 +62,7 @@ TODO
         A series of posts where I reimplement a <b>minimal version</b> of something to demonstrate how it works.
         <ul>
             <li><a href="33-line-react.html">33 line React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a>, also a <a href="96-line-react-jsx.html">96 line React with JSX</a></li>
+            <li>Use TSX whilst <a href="no-npm.html">avoiding npm hell</a> on small projects</li>
             <li>Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out</li>
         </ul>
     </p>
