--- a/covariance.html
+++ b/covariance.html
@@ -2,7 +2,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <head>
         <title>
-            leontrolski -
+            leontrolski - covariance
         </title>
         <style>
 
