Add covariant link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
-            <li><a href="no-npm.html">Avoiding npm</a> on small projects</li>
+            <li>What does <a href="covariance.html">covariant</a> mean?</li>
             <li>Fast and simple <a href="https://github.com/leontrolski/ocdiff">side-by-side diffs</a> for Python</li>
             <li><a href="pglockpy.html">Postgres locks explorer</a></li>
         </ul>
@@ -71,6 +71,7 @@ TODO
         Weenie posts reducing some <b>computer science</b> concept down to its essentials. <em>There are many different takes on these topics scattered across the internet.</em>
         <ul>
             <li>Tips for tricky <a href="leet.html">leet code</a> style questions in interviews</li>
+            <li>What does <a href="covariance.html">covariant</a> mean?</li>
             <li>Sudoku <a href="constraint-sudoku.html">solving</a> using a custom backtracking constraint solver</li>
             <li><a href="lambda-calculus.html">Lambda calculus</a> in modern JavaScript</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
