--- a/my-stars.html
+++ b/my-stars.html
@@ -27,6 +27,7 @@
         might someday be useful, mostly for my own reference. </p>
     <h2 id="javascript">JavaScript</h2>
     <ul>
+        <li><a href="https://github.com/simonw/download-esm">download-esm</a> - vendor npm packages.</li>
         <li><a href="https://github.com/tc39/proposal-temporal">Temporal</a> - better datetimes for JavaScript, coming
             natively to browsers.</li>
         <li><a href="https://github.com/Effect-TS/schema">Effect-TS</a> - Pydantic for TypeScript, maybe better than
@@ -45,7 +46,9 @@
     </ul>
     <h2 id="python">Python</h2>
     <ul>
-        <li><a href="https://github.com/astral-sh/ruff">ruff</a> - nouveau linting a la flake8.</li>
+        <li><a href="https://github.com/ariebovenberg/whenever">whenever</a> - fix all teh datetime problems.</li>
+        <li><a href="https://github.com/microsoft/playwright">playwright</a> - modern Selenium replacement.</li>
+        <li><a href="https://github.com/astral-sh/ruff">ruff</a> - nouveau linting a la flake8, see also <a href="https://github.com/astral-sh/uv">uv</a>.</li>
         <li><a href="https://github.com/jiffyclub/snakeviz">snakeviz</a> - flame graph profiling.</li>
         <li><a href="https://github.com/joerick/pyinstrument">pyinstrument</a> - runtime profiling</li>
         <li><a href="https://github.com/plasma-umass/scalene">scalene</a> - nouveau profiling hotness</li>
@@ -57,16 +60,16 @@
         </li>
         <li><a href="https://github.com/0b01001001/spectree">spectree</a> - FastAPI for Flask.</li>
         <li><a href="https://github.com/gukoff/dtparse">dtparse</a> - example PyO3 usage (Rust Python wrapper).</li>
+        <li><a href="https://github.com/davidhewitt/pythonize">dtparse</a> - Serde for Python objects.</li>
         <li><a href="https://github.com/pantsbuild/pex">pex</a> - bundle Python programs.</li>
         <li><a href="https://github.com/nanne-aben/strictly_typed_pandas">Strictly typed Pandas</a>.</li>
         <li><a href="https://github.com/annotated-types/annotated-types">Meta Pydantic</a>.</li>
+        <li><a href="https://github.com/python-trio/trio">trio</a> - fresh async library.</li>
         <li><a href="https://github.com/cvxpy/cvxpy">Convex Optimization</a>.</li>
-        <li><a href="https://github.com/Fatal1ty/mashumaro">mashumaro</a> - fast dataclass serialization - probably not relevant since Pydantic speedups.</li>
     </ul>
     <h2 id="developer-tools">Developer tools</h2>
     <ul>
         <li><a href="https://github.com/swimmio/docs.swimm.io">swimm.io</a> - funky developer docs.</li>
-        <li><a href="https://github.com/Wilfred/difftastic">difftastic</a> - nice diff tool.</li>
         <li><a href="https://github.com/gnab/remark">remark</a> - easy Markdown powerpoints.</li>
         <li><a href="https://github.com/marimo-team/marimo">marimo</a> - alternative to Jupyter notebooks.</li>
         <li><a href="https://github.com/apache/superset">superset</a> - dashboard builder builder and in-browser SQL
@@ -75,7 +78,9 @@
     </ul>
     <h2 id="sql-postgres">SQL/Postgres</h2>
     <ul>
-        <li><a href="https://github.com/peterldowns/pgtestdb">Really quick Postgres test dbs</a>.</li>
+        <li><a href="https://github.com/xataio/pgroll">pgroll</a> - zero downtime Postgres migrations.</li>
+        <li><a href="https://github.com/paradedb/paradedb">paradedb</a> - turn Postgres into Elasticsearch.</li>
+        <li><a href="https://github.com/kaspermarstal/plprql">plprql</a> - nouveau SQL variant, runs as Postgres extension.</li>
         <li><a href="https://github.com/szarnyasg/gql-sql-pgq-pointers">Graph Queries</a> are coming to ANSI SQL.</li>
         <li><a href="https://github.com/dbcli/pgcli">pgcli</a> alternative to psql.</li>
         <li><a href="https://github.com/CrunchyData/postgres-operator">Postgres++ for Kubernetes</a> - probably a good
@@ -89,6 +94,8 @@
     </ul>
     <h2 id="incremental-view-maintenance">Incremental View Maintenance</h2>
     <ul>
+        <li><a href="https://github.com/readysettech/readyset">readyset</a> another Postgres wire-compatible IVM thing.</li>
+        <li><a href="https://github.com/pathwaycom/pathway">pathway</a> streaming system allegedly with IVM capabilities.</li>
         <li><a href="https://github.com/sraoss/pg_ivm">pg_ivm</a> - IVM extension to Postgres, this might be the route
             it
             takes to end up native.</li>
