--- a/my-stars.html
+++ b/my-stars.html
@@ -60,7 +60,7 @@
         </li>
         <li><a href="https://github.com/0b01001001/spectree">spectree</a> - FastAPI for Flask.</li>
         <li><a href="https://github.com/gukoff/dtparse">dtparse</a> - example PyO3 usage (Rust Python wrapper).</li>
-        <li><a href="https://github.com/davidhewitt/pythonize">dtparse</a> - Serde for Python objects.</li>
+        <li><a href="https://github.com/davidhewitt/pythonize">pythonize</a> - Serde for Python objects.</li>
         <li><a href="https://github.com/pantsbuild/pex">pex</a> - bundle Python programs.</li>
         <li><a href="https://github.com/nanne-aben/strictly_typed_pandas">Strictly typed Pandas</a>.</li>
         <li><a href="https://github.com/annotated-types/annotated-types">Meta Pydantic</a>.</li>
