--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
+            <li><a href="unorder.html">Weeding</a> out flakey database tests</li>
             <li>What does <a href="covariance.html">covariant</a> mean?</li>
             <li>Fast and simple <a href="https://github.com/leontrolski/ocdiff">side-by-side diffs</a> for Python</li>
             <li><a href="pglockpy.html">Postgres locks explorer</a></li>
@@ -55,6 +56,7 @@ TODO
             <li>Most of the time, you can use <a href="postgres-as-queue.html">Postgres as a queue</a></li>
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
             <li>Postgres <a href="pglockpy.html">locks explorer</a></li>
+            <li><a href="unorder.html">Weeding</a> out flakey database tests</li>
         </ul>
     </p>
     <br>
