Finally fix Pratt page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ TODO
             <li>Sudoku <a href="constraint-sudoku.html">solving</a> using a custom backtracking constraint solver</li>
             <li><a href="lambda-calculus.html">Lambda calculus</a> in modern JavaScript</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
-            <li><a href="weenie-lisp.html">Weenie LISP</a></li>
-            <li>A half-baked post demonstrating a simple <a href="pratt-example.html">Pratt parser</a></li>
+            <li>Weenie <a href="weenie-lisp.html">LISP</a> parser</li>
+            <li>Then a smol <a href="pratt-example.html">Pratt parser</a></li>
         </ul>
     </p>
     <br>
