--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ TODO
         <ul>
             <li><a href="cycling-in-london.html">Guide for n00bs</a> cycling in London</li>
             <li><a href="cycling.html">Day trips</a> from Central London</li>
+            <li><a href="swimming.html">Wild swimming</a> from Central London</li>
         </ul>
     </p>
     <br>
