--- a/swimming.html
+++ b/swimming.html
@@ -28,7 +28,7 @@
             Wild swimming around London
         </h1>
         <p>
-            Some Oli-verfied swim spots that are a train-ride-and-a-walk away from London:
+            Some Oli-verified swim spots that are a train-ride-and-a-walk away from London:
         </p>
         <img class="img-cycling" src="images/swimming/leigh.jpeg">
         <img class="img-cycling" src="images/swimming/goring.jpeg">
