--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
+            <li><a href="grammar.html">Changing and compiling</a> the cpython interpreter</li>
             <li><a href="unorder.html">Weeding</a> out flakey database tests</li>
-            <li>What does <a href="covariance.html">covariant</a> mean?</li>
             <li>Fast and simple <a href="https://github.com/leontrolski/ocdiff">side-by-side diffs</a> for Python</li>
             <li><a href="pglockpy.html">Postgres locks explorer</a></li>
         </ul>
@@ -104,6 +104,7 @@ TODO
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a>, or <a href="git-rebase-diff.html">git diff after a rebase</a></li>
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
+            <li><a href="grammar.html">Changing and compiling</a> the cpython interpreter</li>
         </ul>
     </p>
     <br>
