Stop doing things

--- a/cmd-click-manifesto.html
+++ b/cmd-click-manifesto.html
@@ -34,6 +34,8 @@
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
+        <p><em>Part of a series - <a href="index.html#stop">Stop doing things</a></em></p>
+        <br>
         <p><i>2023-02-23</i></p>
         <h1>The CMD-click manifesto</h1>
         <small><em>Or CTRL-click or META-click or whatever.</em></small>
