--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ TODO
     <p>
         ✨ New! ✨
         <ul>
+            <li>Stop using <a href="fixtures.html">pytest fixtures</a></li>
             <li><a href="grammar.html">Changing and compiling</a> the cpython interpreter</li>
-            <li><a href="unorder.html">Weeding</a> out flakey database tests</li>
             <li>Fast and simple <a href="https://github.com/leontrolski/ocdiff">side-by-side diffs</a> for Python</li>
             <li><a href="pglockpy.html">Postgres locks explorer</a></li>
         </ul>
@@ -38,6 +38,7 @@ TODO
         <div><code><a href="#database-tips">Database tips</a></code></div>
         <div><code><a href="#minimal-versions">Minimal versions</a></code></div>
         <div><code><a href="#cs-essentials">Computer science essentials</a></code></div>
+        <div><code><a href="#stop">Stop doing things</a></code></div>
         <div><code><a href="#high-level">High level programming thoughts</a></code></div>
         <div><code><a href="#coding-bits-and-bobs">Python/Javscript bits and bobs</a></code></div>
         <div><code><a href="#what-ifs">What ifs</a></code></div>
@@ -82,15 +83,24 @@ TODO
         </ul>
     </p>
     <br>
+    <p id="stop">
+        <b>Stop</b> doing things.
+        <ul>
+            <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
+            <li>Stop doing <a href="mostly-pointless.html">OO so much</a></li>
+            <li>Stop using <a href="sane-config.html">mad config</a></li>
+            <li>Stop using <a href="fixtures.html">pytest fixtures</a></li>
+        </ul>
+    </p>
+    <br>
     <p id="high-level">
         <b>High level</b> thoughts on professional programming.
         <ul>
-            <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
-            <li><a href="mostly-pointless.html">Stop doing OO so much</a></li>
             <li>Monolith? Microservices? <a href="manipleservices.html">Manipleservices</a></li>
             <li>Test categorisation <a href="test-zen.html">Zen</a></li>
         </ul>
     </p>
+    <br>
     <p id="coding-bits-and-bobs">
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
@@ -100,7 +110,6 @@ TODO
             <li>Useful <a href="pytest-helpful.html">pytest</a> plugins</li>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
-            <li>Stop doing <a href="sane-config.html">mad config</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a>, or <a href="git-rebase-diff.html">git diff after a rebase</a></li>
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
