--- a/mostly-pointless.html
+++ b/mostly-pointless.html
@@ -30,6 +30,8 @@
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
+        <p><em>Part of a series - <a href="index.html#stop">Stop doing things</a></em></p>
+        <br>
         <p><i>2021-01-27</i></p>
         <h1>
             OO in Python is mostly pointless
