--- a/sane-config.html
+++ b/sane-config.html
@@ -30,6 +30,8 @@
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
+        <p><em>Part of a series - <a href="index.html#stop">Stop doing things</a></em></p>
+        <br>
         <p><i>2020-12-17</i></p>
         <h1>
             Stop doing mad config
