--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ TODO
             <li><a href="consciousness.html">Summary</a> of the book "Consciousness and the Social Brain"</li>
             <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
+            <li>My <a href="thermostat.html">dream thermostat</a></li>
         </ul>
     </p>
     <br>
