--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ TODO
             <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
             <li>My <a href="thermostat.html">dream thermostat</a></li>
+            <li>Bayes <a href="bayes.html">derivation</a></li>
         </ul>
     </p>
     <br>
