--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ TODO
             <li><a href="cycling.html">Day trips</a> from Central London</li>
             <li><a href="rail-map.html">Rail travel times</a> from Central London</li>
             <li><a href="swimming.html">Wild swimming</a> from Central London</li>
+            <li><a href="thames.html">Thames Path</a> distances</li>
         </ul>
     </p>
     <br>
