--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ TODO
     </p>
     <br>
     <p id="cycling">
-        <b>Cycling</b>.
+        <b>Cycling, Walking, Swimming, etc</b>.
         <ul>
             <li><a href="cycling-in-london.html">Guide for n00bs</a> cycling in London</li>
             <li><a href="cycling.html">Day trips</a> from Central London</li>
