Add wheel building

--- a/rail-map.html
+++ b/rail-map.html
@@ -18,7 +18,7 @@
         <script src="scripts/svg-pan-zoom.min.js"></script>
     </head>
     <body>
-        <a href="index.html">
+        <a href="index.html#cycling">
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
