--- a/cycling.html
+++ b/cycling.html
@@ -26,7 +26,7 @@
 
     </head>
     <body>
-        <a href="index.html">
+        <a href="index.html#cycling">
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
