--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ TODO
             <li><a href="rail-map.html">Rail travel times</a> from Central London</li>
             <li><a href="swimming.html">Wild swimming</a> from Central London</li>
             <li><a href="thames.html">Thames Path</a> distances</li>
+            <li><a href="wheel-building.html">Wheel building</a> tips</li>
         </ul>
     </p>
     <br>
