--- a/swimming.html
+++ b/swimming.html
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <a href="index.html">
+        <a href="index.html#cycling">
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
