--- a/thames.html
+++ b/thames.html
@@ -16,7 +16,7 @@
         </style>
     </head>
     <body>
-        <a href="index.html">
+        <a href="index.html#cycling">
             <img src="pic.png" style="height:2em">
             ⇦
         </a>
