Add stdlib protocol types

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ TODO
         <div><code><a href="#cs-essentials">Computer science essentials</a></code></div>
         <div><code><a href="#stop">Stop doing things</a></code></div>
         <div><code><a href="#high-level">High level programming thoughts</a></code></div>
+        <div><code><a href="#typing">Typing</a></code></div>
         <div><code><a href="#coding-bits-and-bobs">Python/Javscript bits and bobs</a></code></div>
         <div><code><a href="#what-ifs">What ifs</a></code></div>
         <div><code><a href="#cycling">Cycling</a></code></div>
@@ -71,7 +72,6 @@ TODO
         Weenie posts reducing some <b>computer science</b> concept down to its essentials. <em>There are many different takes on these topics scattered across the internet.</em>
         <ul>
             <li>Tips for tricky <a href="leet.html">leet code</a> style questions in interviews</li>
-            <li>What does <a href="covariance.html">covariant</a> mean?</li>
             <li>Sudoku <a href="constraint-sudoku.html">solving</a> using a custom backtracking constraint solver</li>
             <li><a href="lambda-calculus.html">Lambda calculus</a> in modern JavaScript</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
@@ -98,14 +98,22 @@ TODO
         </ul>
     </p>
     <br>
+    <p id="typing">
+        <b>Typing</b>.
+        <ul>
+            <li>What does <a href="covariance.html">covariant</a> mean?</li>
+            <li>Python stdlib <a href="protocol.html">Protocol types</a></li>
+            <li>Using <a href="typeis.html">TypeIs</a> in Python</li>
+            <li>mypyc is <a href="mypyc-quick.html">quick</a></li>
+            <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
+        </ul>
+    </p>
+    <br>
     <p id="coding-bits-and-bobs">
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
             <li>UpSet plots are <a href="upset.html">useful</a></li>
-            <li>Using <a href="typeis.html">TypeIs</a> in Python</li>
-            <li>mypyc is <a href="mypyc-quick.html">quick</a></li>
             <li>Useful <a href="pytest-helpful.html">pytest</a> plugins</li>
-            <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a>, or <a href="git-rebase-diff.html">git diff after a rebase</a></li>
