--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ TODO
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
             <li>My <a href="thermostat.html">dream thermostat</a></li>
             <li>Bayes <a href="bayes.html">derivation</a></li>
-            <li><a href="recipes.html">Recipes</a> for laid back engineers</li>
+            <li><a href="recipes.html">Recipes</a> for laid-back engineers</li>
         </ul>
     </p>
     <br>
