--- a/my-stars.html
+++ b/my-stars.html
@@ -62,7 +62,7 @@
         <li><a href="https://github.com/gukoff/dtparse">dtparse</a> - example PyO3 usage (Rust Python wrapper).</li>
         <li><a href="https://github.com/davidhewitt/pythonize">pythonize</a> - Serde for Python objects.</li>
         <li><a href="https://github.com/pantsbuild/pex">pex</a> - bundle Python programs.</li>
-        <li><a href="https://github.com/nanne-aben/strictly_typed_pandas">Strictly typed Pandas</a>.</li>
+        <li><a href="https://github.com/unionai-oss/pandera">pandera</a> - Strictly typed Pandas.</li>
         <li><a href="https://github.com/annotated-types/annotated-types">Meta Pydantic</a>.</li>
         <li><a href="https://github.com/python-trio/trio">trio</a> - fresh async library.</li>
         <li><a href="https://github.com/cvxpy/cvxpy">Convex Optimization</a>.</li>
@@ -91,6 +91,10 @@
         <li><a href="https://github.com/supabase/realtime">realtime</a> - listen to Postgres changes over Websockets.
         </li>
         <li><a href="https://github.com/fsprojects/Rezoom.SQL">Magic F# SQL typechecking</a>.</li>
+        <li><a href="https://github.com/Mooncake-Labs/pg_mooncake">pg_mooncake</a> - Postgres as analytics db.</li>
+        <li><a href="https://github.com/stripe/pg-schema-diff">pg-schema-diff</a> - diff schemas.</li>
+        <li><a href="https://github.com/neondatabase/neon">Neon</a> - serverless Postgres.</li>
+        <li><a href="https://github.com/sunng87/pgwire">pgwire</a> - Postgres wire protocol as a rust library.</li>
     </ul>
     <h2 id="incremental-view-maintenance">Incremental View Maintenance</h2>
     <ul>
