--- a/recipes.html
+++ b/recipes.html
@@ -30,10 +30,14 @@
         <ul>
             <li><a href="#01">Santorini Tomato Keftes</a><img class="thumb" src="images/recipes/01-fritters-thumb.png"></li>
             <li><a href="#02">Greek Spinach Risotto</a><img class="thumb" src="images/recipes/02-risotto-thumb.png"></li>
+            <li><a href="#03">Mexican Lentils</a><img class="thumb" src="images/recipes/03-lentils-thumb.png"></li>
+            <li><a href="#04">Pasta e Fagiolli</a></li>
         </ul>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.png"></p><hr>
         <p id="02"><img class="recipe" src="images/recipes/02-risotto.png"></p><hr>
+        <p id="03"><img class="recipe" src="images/recipes/03-lentils.png"></p><hr>
+        <p id="04"><img class="recipe" src="images/recipes/04-pasta.png"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
@@ -41,6 +45,8 @@
                 Reference format is <code>{book}.{page}</code>
                 <ul>
                     <li><code>tGVC</code> = <a href="https://www.amazon.co.uk/Greek-Vegetarian-Cookbook-Heather-Thomas/dp/0714879134">the Greek Vegetarian Cookbook</a></li>
+                    <li><code>tMVC</code> = <a href="https://www.amazon.co.uk/Mexican-Vegetarian-Cookbook-authentic-everyday/dp/1838665269">the Mexican Vegetarian Cookbook</a></li>
+                    <li><code>LFV</code> = <a href="https://www.amazon.co.uk/Leon-Fast-Vegetarian-Henry-Dimbleby/dp/1840916109">Leon: Fast Vegetarian</a></li>
                 </ul>
             </li>
             <li>Ingredients are vaguely grouped by aisle.</li>
