--- a/recipes.html
+++ b/recipes.html
@@ -28,16 +28,16 @@
         </h1>
         <p><em><a href="#about">About</a></em></p>
         <ul>
-            <li><a href="#01">Santorini Tomato Keftes</a><img class="thumb" src="images/recipes/01-fritters-thumb.png"></li>
-            <li><a href="#02">Greek Spinach Risotto</a><img class="thumb" src="images/recipes/02-risotto-thumb.png"></li>
-            <li><a href="#03">Mexican Lentils</a><img class="thumb" src="images/recipes/03-lentils-thumb.png"></li>
+            <li><a href="#01">Santorini Tomato Keftes</a><img class="thumb" src="images/recipes/01-fritters-thumb.webp"></li>
+            <li><a href="#02">Greek Spinach Risotto</a><img class="thumb" src="images/recipes/02-risotto-thumb.webp"></li>
+            <li><a href="#03">Mexican Lentils</a><img class="thumb" src="images/recipes/03-lentils-thumb.webp"></li>
             <li><a href="#04">Pasta e Fagiolli</a></li>
         </ul>
         <hr>
-        <p id="01"><img class="recipe" src="images/recipes/01-fritters.png"></p><hr>
-        <p id="02"><img class="recipe" src="images/recipes/02-risotto.png"></p><hr>
-        <p id="03"><img class="recipe" src="images/recipes/03-lentils.png"></p><hr>
-        <p id="04"><img class="recipe" src="images/recipes/04-pasta.png"></p><hr>
+        <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
+        <p id="02"><img class="recipe" src="images/recipes/02-risotto.webp"></p><hr>
+        <p id="03"><img class="recipe" src="images/recipes/03-lentils.webp"></p><hr>
+        <p id="04"><img class="recipe" src="images/recipes/04-pasta.webp"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
