--wip-- [skip ci]

--- a/recipes.html
+++ b/recipes.html
@@ -15,6 +15,9 @@
             details {border-bottom:solid 5px gray;}
             .thumb {width:4rem; display:block;}
             .recipe {width:100%;}
+            table{border-collapse:collapse;}
+            tr{border:solid 1px gray;}
+            td{padding:0.5rem;}
         </style>
     </head>
     <body>
@@ -27,17 +30,19 @@
             Recipes for laid-back engineers
         </h1>
         <p><em><a href="#about">About</a></em></p>
-        <ul>
-            <li><a href="#01">Santorini Tomato Keftes</a><img class="thumb" src="images/recipes/01-fritters-thumb.webp"></li>
-            <li><a href="#02">Greek Spinach Risotto</a><img class="thumb" src="images/recipes/02-risotto-thumb.webp"></li>
-            <li><a href="#03">Mexican Lentils</a><img class="thumb" src="images/recipes/03-lentils-thumb.webp"></li>
-            <li><a href="#04">Pasta e Fagiolli</a></li>
-        </ul>
+        <table>
+            <tr><td><a href="#01">Santorini Tomato Keftes</a></td><td><img class="thumb" src="images/recipes/01-fritters-thumb.webp"></td></tr>
+            <tr><td><a href="#02">Greek Spinach Risotto</a></td><td><img class="thumb" src="images/recipes/02-risotto-thumb.webp"></td></tr>
+            <tr><td><a href="#03">Mexican Lentils</a></td><td><img class="thumb" src="images/recipes/03-lentils-thumb.webp"></td></tr>
+            <tr><td><a href="#04">Pasta e Fagiolli</a></td></tr>
+            <tr><td><a href="#05">Cashew Curry</a></td><td><img class="thumb" src="images/recipes/05-cashew-thumb.webp"></td></tr>
+        </table>
         <hr>
         <p id="01"><img class="recipe" src="images/recipes/01-fritters.webp"></p><hr>
         <p id="02"><img class="recipe" src="images/recipes/02-risotto.webp"></p><hr>
         <p id="03"><img class="recipe" src="images/recipes/03-lentils.webp"></p><hr>
         <p id="04"><img class="recipe" src="images/recipes/04-pasta.webp"></p><hr>
+        <p id="05"><img class="recipe" src="images/recipes/05-cashew.webp"></p><hr>
         <br>
         <ul id="about">
             <li>For "laid-back engineers" in the sense that everything is schematic but approximate.</li>
