--- a/bayes.html
+++ b/bayes.html
@@ -23,6 +23,15 @@
         <p><i>2025-02-13</i></p>
         <h1>Bayes visual derivation</h1>
         <p>Summary of <a href="https://www.youtube.com/watch?v=HZGCoVF3YvM">this video</a> by 3Blue1Brown.</p>
+        <p>
+            We're trying to work out the probability someone is a librarian given they look like one - P(H|E), in layman's terms, the probabilities we need to construct the diagram below are:
+            <ul>
+                <li>The percentage of librarians in the whole population - P(H)</li>
+                <li>The percentage of librarians that look like librarians - P(E|H)</li>
+                <li>The percentage of non-librarians that look like librarians - P(E|¬H)</li>
+            </ul>
+        </p>
+        <br>
         <img src="images/bayes.svg">
     </body>
 </html>
