--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ TODO
     <p id="projects">
         Here are some of my <b>projects</b>, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
-            <li><a href="https://github.com/leontrolski/trolskgen">trolskgen</a> - Ergonomic codegen for Python</li>
+            <li><a href="https://github.com/leontrolski/trolskgen">trolskgen</a> - ergonomic codegen for Python</li>
             <li><a href="https://github.com/leontrolski/tkintergalactic">tkintergalactic</a> - declarative Tcl/Tk UI library for Python</li>
             <li><a href="https://stepping.site">stepping</a> - incremental view maintenance for application developers</li>
             <li><a href="https://github.com/leontrolski/ocdiff">ocdiff</a> - fast and simple side-by-side diffs for Python</li>
