--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ TODO
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a>, or <a href="git-rebase-diff.html">git diff after a rebase</a></li>
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
             <li><a href="grammar.html">Changing and compiling</a> the cpython interpreter</li>
+            <li><a href="trolskgen.html">Using</a> Python 3.14 template strings to write Python</li>
         </ul>
     </p>
     <br>
