Use a nicer prism theme

--- a/cmd-click-manifesto.html
+++ b/cmd-click-manifesto.html
@@ -20,7 +20,7 @@
             .inline {background: #b3b2b226; padding-left: 0.3em; padding-right: 0.3em; white-space: nowrap;}
             blockquote {font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
             details {border-bottom:solid 5px gray;}
-            pre {width: 100%; margin: 0; padding: 0.6em !important; font-size: 0.8em !important;margin-bottom: 2em !important;}
+            /* pre {width: 100%; margin: 0; padding: 0.6em !important; font-size: 0.8em !important;} */
         </style>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
