--- a/manipleservices.html
+++ b/manipleservices.html
@@ -26,7 +26,7 @@
             .link-1 {display:table;font-size:1rem;margin-bottom:0.5rem;margin-top:0.5rem;}
             .link-2 {display:table;font-size:0.8rem;margin-bottom:0.2rem;margin-left:2rem;}
     </style>
-    <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet">
+    <link href="https://unpkg.com/prism-themes@1.9.0/themes/prism-darcula.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js">
 
     </script>
