--- a/pratt-example.html
+++ b/pratt-example.html
@@ -17,7 +17,7 @@
             table{background-color: white;}
             td{padding-right:1rem;}
         </style>
-        <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet">
+        <link href="https://unpkg.com/prism-themes@1.9.0/themes/prism-darcula.min.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js">
 
         </script>
