--- a/pytest-helpful.html
+++ b/pytest-helpful.html
@@ -16,7 +16,7 @@
             img{max-width:80rem;}
             .overflow{overflow:scroll;max-width:100%;box-shadow:0 0 5px 0 gray;}
         </style>
-        <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet">
+        <link href="https://unpkg.com/prism-themes@1.9.0/themes/prism-darcula.min.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/plugins/autoloader/prism-autoloader.min.js"></script>
     </head>
@@ -316,6 +316,6 @@ class MonkeyPatch:
 def patch(monkeypatch: Any) -> Iterator[MonkeyPatch]:
     yield MonkeyPatch(monkeypatch)
 </code></pre>
-   
+
     </body>
 </html>
