--- a/upset-old.html
+++ b/upset-old.html
@@ -16,7 +16,7 @@
             img{max-width:30rem;}
             .overflow{overflow-x: scroll;max-width:30rem;box-shadow:0 0 5px 0 gray;}
         </style>
-        <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet">
+        <link href="https://unpkg.com/prism-themes@1.9.0/themes/prism-darcula.min.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/components/prism-core.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/plugins/autoloader/prism-autoloader.min.js"></script>
     </head>
